# linkedin-dms

./: .gitignore  PR_DESCRIPTION.md  README.md  pr-description-24.md  pyproject.toml
apps/api/: main.py
apps/cli/: __main__.py
chrome-extension/: background.js  manifest.json  popup.html  popup.js  test_background.mjs
docs/: architecture.md  features.md  known-issues.md
libs/core/: job_runner.py  models.py  redaction.py  storage.py
libs/providers/linkedin/: provider.py
scripts/: integration_smoke.py  run_tests.sh  verify_storage_impl.py
tests/: test_api_refresh.py  test_browser_context.py  test_cli.py  test_fetch_messages.py  test_list_threads.py  test_provider_retry.py  test_redaction.py  test_storage.py  test_sync_send.py
