[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "desearch-dms"
version = "0.0.1"
description = "Community-built LinkedIn DM sync service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["apps*", "libs*"]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
