[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "desearch-dms"
version = "0.0.1"
description = "Community-built LinkedIn DM sync service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "cryptography>=42.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["apps*", "libs*"]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
